[metadata]
name = gym-bhsl-tjkemp
version = attr: gym_bhsl.__VERSION__
author = tjkemp
author_email = tero.kemppi@gmail.com
description = An OpenAI Gym stock market environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tjkemp/gym-buy-high-sell-low
project_urls =
    Bug Tracker = https://github.com/tpjkemp/gym-buy-high-sell-low/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
include_package_data = True
packages = find:
python_requires = >=3.7
