[metadata]
name = gym-buy-high-sell-low
version = attr: gym_bhsl.__VERSION__
author = tjkemp
author_email = tero.kemppi@gmail.com
description = An OpenAI Gym stock market environment
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gym environment, reinforcement learning
url = https://github.com/tjkemp/gym-buy-high-sell-low
project_urls =
    Bug Tracker = https://github.com/tpjkemp/gym-buy-high-sell-low/issues
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
packages = find:
python_requires = >=3.7
